--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,5 @@ jobs:
           ruby-version: '3.4.1'
           bundler-cache: true      
       - run: bundle install
-      - run: bundle exec rake test
+      - run: bundle exec rake spec
       - run: bundle exec rspec
